# Modules/Youtube/TrackYourLife.Modules.Youtube.Application/Features/YoutubeChannels/Commands/SetChannelFavorite/SetChannelFavoriteCommandValidator.cs
@@ -1,0 +1,11 @@
+using FluentValidation;
+
+namespace TrackYourLife.Modules.Youtube.Application.Features.YoutubeChannels.Commands.SetChannelFavorite;
+
+internal sealed class SetChannelFavoriteCommandValidator : AbstractValidator<SetChannelFavoriteCommand>
+{
+    public SetChannelFavoriteCommandValidator()
+    {
+        RuleFor(x => x.YoutubeChannelId).NotEmpty();
+    }
+}
