# Modules/Youtube/TrackYourLife.Modules.Youtube.Infrastructure/Data/YoutubeChannels/YoutubeChannelReadModelConfiguration.cs
@@ -26,6 +26,7 @@ internal sealed class YoutubeChannelReadModelConfiguration
             .HasConversion(v => v.Value, v => YoutubeCategoryId.Create(v))
             .IsRequired();
         builder.Property(e => e.CategoryName).IsRequired().HasMaxLength(YoutubeCategory.MaxNameLength);
+        builder.Property(e => e.IsFavorite).IsRequired().HasDefaultValue(false);
         builder.Property(e => e.CreatedOnUtc).IsRequired();
         builder.Property(e => e.ModifiedOnUtc).IsRequired(false);
     }
